# Curarepo3

./: .replit  LOCAL_INSTALLATION.md  README.md  README.md~  README_DESKTOP.md  TROUBLESHOOTING.md  compare_symptoms.py  data_processing.py  extract_symptoms.py  fromtensorflow.keras.py  intents.json  local_chatbot.py  main.py  medical_chatbot.py  pyproject.toml  requirements_github.txt  retrain_disease_model.py  retrain_disease_model_fixed.py  retrain_disease_model_kaggle.py  run.bat  run.sh  setup.bat  setup.py  setup.sh  test_disease_model.py  test_disease_model_updated.py
attached_assets/: ECG_anomaly_detection_LSTM.py  Lifestyle_Hub.py  README.md  Train_diabetes.py  bp_xgb.pkl  disease_prediction_model.pkl  ecg_lstm_model.h5  index.html  lifestyle_model_new.pkl  trained_model.h5
models/: anomaly.py  blood_pressure.py  custom_tf_loader.py  diabetes.py  disease.py  lifestyle.py  skin_disease.py  symptoms_list.py
static/css/: style.css
static/data/: Disease_specialist.csv  Symptom-severity.csv  symptom_Description.csv  symptom_precaution.csv  symptom_severity.csv
static/js/: chat.js  health_monitor.js  predictions.js  script.js
templates/: base.html  health_monitor.html  index.html  layout.html
templates/partials/: anomaly.html  blood_pressure.html  lifestyle.html
workspace/Cura/: README.md  app.py  main.py  utils.py  verify_models.py
workspace/Cura/models/: blood_pressure.py  diabetes.py  disease.py  lifestyle.py  skin_disease.py
workspace/Cura/static/css/: chat.css  mobile.css  style.css
workspace/Cura/templates/: index.html
(+6 files in other folders)
