[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=5.0.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.14.0",
    "xgboost>=3.0.1",
]
